fix sensor part code
