# sensors/listener.go
@@ -17,79 +17,41 @@ limitations under the License.
 package sensors
 
 import (
-	"encoding/json"
 	"fmt"
-	"strings"
-	"io/ioutil"
-	"net/http"
 	"hash/fnv"
+	"strings"
 
-	cloudevents "github.com/cloudevents/sdk-go/v2"
-	"github.com/nats-io/go-nats"
+	"github.com/Knetic/govaluate"
 	"github.com/antonmedv/expr"
+	cloudevents "github.com/cloudevents/sdk-go/v2"
 	"github.com/pkg/errors"
-	"github.com/sirupsen/logrus"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 
 	"github.com/argoproj/argo-events/common"
 	"github.com/argoproj/argo-events/eventbus"
 	eventbusdriver "github.com/argoproj/argo-events/eventbus/driver"
 	"github.com/argoproj/argo-events/pkg/apis/sensor/v1alpha1"
-	"github.com/argoproj/argo-events/sensors/dependencies"
-	"github.com/argoproj/argo-events/sensors/types"
+	sensordependencies "github.com/argoproj/argo-events/sensors/dependencies"
+	sensortriggers "github.com/argoproj/argo-events/sensors/triggers"
 )
 
 // ListenEvents watches and handles events received from the gateway.
 func (sensorCtx *SensorContext) ListenEvents() error {
-	// start processing the update Notification NotificationQueue
-	go func() {
-		for e := range sensorCtx.NotificationQueue {
-			sensorCtx.processQueue(e)
-		}
-	}()
-
 	errCh := make(chan error)
-	if sensorCtx.EventBusConfig != nil {
-		go func() {
-			if err := sensorCtx.listenEventsOverEventBus(); err != nil {
-				errCh <- errors.Wrap(err, "failed to listen events over EventBus")
-			}
-		}()
-	} else {
-		// TODO: unsupport these.
-		sensorCtx.Logger.Warn("spec.subscription is deprecated, will be unsupported soon, please use EventBus instead")
-		// listen events over http
-		if sensorCtx.Sensor.Spec.Subscription.HTTP != nil {
-			go func() {
-				if err := sensorCtx.listenEventsOverHTTP(); err != nil {
-					errCh <- errors.Wrap(err, "failed to listen events over HTTP subscription")
-				}
-			}()
-		}
-
-		// listen events over nats
-		if sensorCtx.Sensor.Spec.Subscription.NATS != nil {
-			go func() {
-				if err := sensorCtx.listenEventsOverNATS(); err != nil {
-					errCh <- errors.Wrap(err, "failed to listen events over NATS subscription")
-				}
-			}()
-		}
-	}
+	sensorCtx.listenEventsOverEventBus(errCh)
 	err := <-errCh
 	sensorCtx.Logger.WithError(err).Errorln("subscription failure. stopping sensor operations")
-
 	return nil
 }
 
-func (sensorCtx *SensorContext) listenEventsOverEventBus() error {
+func (sensorCtx *SensorContext) listenEventsOverEventBus(errCh chan<- error) {
 	sensor := sensorCtx.Sensor
 	// Get a mapping of dependencyExpression: []triggers
 	triggerMapping := make(map[string][]v1alpha1.Trigger)
 	for _, trigger := range sensor.Spec.Triggers {
 		depExpr, err := sensorCtx.getDependencyExpression(trigger)
 		if err != nil {
-			return nil, err
+			errCh <- err
 		}
 		triggers, ok := triggerMapping[depExpr]
 		if !ok {
@@ -99,41 +61,133 @@ func (sensorCtx *SensorContext) listenEventsOverEventBus() error {
 		triggerMapping[depExpr] = triggers
 	}
 
-	deps := []eventbusdriver.Dependency{}
+	depMapping := make(map[string]v1alpha1.EventDependency)
 	for _, d := range sensor.Spec.Dependencies {
-		esName := d.EventSourceName
-		if esName == "" {
-			esName = d.GatewayName
-		}
-		ebd := eventbusdriver.Dependency{
-			Name: d.Name,
-			EventSourceName: esName,
-			EventName: d.EventName,
-		}
-		deps = append(deps, ebd)
+		depMapping[d.Name] = d
 	}
 
-	for k, v := range triggerMapping{
-		// Generate clientID with hash code
-		h := fnv.New32a()
-		h.Write([]byte(k))
-		clientID := fmt.Sprintf("client-%v", h.Sum32())
-		ebDriver, err := eventbus.GetDriver(*sensorCtx.EventBusConfig, sensorCtx.EventBusSubject, clientID, sensorCtx.Logger)
-		if err != nil {
-			sensorCtx.Logger.WithError(err).Errorln("Failed to get event bus driver")
-			return err
-		}
-		err = ebDriver.Connect()
-		if err != nil {
-			sensorCtx.Logger.WithError(err).Errorln("Failed to connect to event bus")
-			return err
-		}
-		ebDriver.SubscribeEventSources(k, deps, )
+	for k, v := range triggerMapping {
+		go func(depExpression string, triggers []v1alpha1.Trigger) {
+			// Calculate dependencies of each group of triggers.
+			de := strings.ReplaceAll(depExpression, "-", "\\-")
+			expr, err := govaluate.NewEvaluableExpression(de)
+			if err != nil {
+				errCh <- err
+			}
+			depNames := unique(expr.Vars())
+			deps := []eventbusdriver.Dependency{}
+			for _, depName := range depNames {
+				dep, ok := depMapping[depName]
+				if !ok {
+					errCh <- errors.Errorf("Dependency expression and dependency list do not match, %s is not found", depName)
+				}
+				esName := dep.EventSourceName
+				if esName == "" {
+					esName = dep.GatewayName
+				}
+				d := eventbusdriver.Dependency{
+					Name:            dep.Name,
+					EventSourceName: esName,
+					EventName:       dep.EventName,
+				}
+				deps = append(deps, d)
+			}
+
+			// Generate clientID with hash code
+			h := fnv.New32a()
+			h.Write([]byte(k))
+			clientID := fmt.Sprintf("client-%v", h.Sum32())
+			ebDriver, err := eventbus.GetDriver(*sensorCtx.EventBusConfig, sensorCtx.EventBusSubject, clientID, sensorCtx.Logger)
+			if err != nil {
+				sensorCtx.Logger.WithError(err).Errorln("Failed to get event bus driver")
+				errCh <- err
+			}
+			err = ebDriver.Connect()
+			if err != nil {
+				sensorCtx.Logger.WithError(err).Errorln("Failed to connect to event bus")
+				errCh <- err
+			}
+			triggerNames := []string{}
+			for _, t := range triggers {
+				triggerNames = append(triggerNames, t.Template.Name)
+			}
+			sensorCtx.Logger.Infof("Started to subscribe events for triggers %s with client %s", fmt.Sprintf("[%s]", strings.Join(triggerNames, " ")), clientID)
+			ebDriver.SubscribeEventSources(depExpression, deps, func(depName string, event cloudevents.Event) bool {
+				dep, ok := depMapping[depName]
+				if !ok {
+					return false
+				}
+				if dep.Filters == nil {
+					return false
+				}
+				e := convertEvent(event)
+				result, err := sensordependencies.Filter(e, dep.Filters)
+				if err != nil {
+					sensorCtx.Logger.WithError(err).Errorln("Failed to apply filters")
+					return false
+				}
+				return result
+			}, func(events map[string]cloudevents.Event) {
+				err := sensorCtx.triggerActions(events, triggers)
+				if err != nil {
+					sensorCtx.Logger.WithError(err).Errorln("Failed to trigger actions")
+				}
+			})
+		}(k, v)
 	}
-	
-	return
 }
 
+func (sensorCtx *SensorContext) triggerActions(events map[string]cloudevents.Event, triggers []v1alpha1.Trigger) error {
+	log := sensorCtx.Logger
+	eventsMapping := make(map[string]*v1alpha1.Event)
+	for k, v := range events {
+		eventsMapping[k] = convertEvent(v)
+	}
+	for _, trigger := range triggers {
+		if err := sensortriggers.ApplyTemplateParameters(eventsMapping, &trigger); err != nil {
+			log.Errorf("failed to apply template parameters, %v", err)
+			return err
+		}
+
+		log.WithField("triggerName", trigger.Template.Name).Infoln("resolving the trigger implementation")
+		triggerImpl := sensorCtx.GetTrigger(&trigger)
+		if triggerImpl == nil {
+			log.WithField("triggerName", trigger.Template.Name).Errorln("failed to get the specific trigger implementation. continuing to next trigger if any")
+			continue
+		}
+
+		log.WithField("triggerName", trigger.Template.Name).Infoln("fetching trigger resource if any")
+		obj, err := triggerImpl.FetchResource()
+		if err != nil {
+			return err
+		}
+		if obj == nil {
+			log.WithField("triggerName", trigger.Template.Name).Warnln("trigger resource is empty")
+			continue
+		}
+
+		log.WithField("triggerName", trigger.Template.Name).Infoln("applying resource parameters if any")
+		updatedObj, err := triggerImpl.ApplyResourceParameters(eventsMapping, obj)
+		if err != nil {
+			return err
+		}
+
+		log.WithField("triggerName", trigger.Template.Name).Infoln("executing the trigger resource")
+		newObj, err := triggerImpl.Execute(eventsMapping, updatedObj)
+		if err != nil {
+			return err
+		}
+		log.WithField("triggerName", trigger.Template.Name).Infoln("trigger resource successfully executed")
+
+		log.WithField("triggerName", trigger.Template.Name).Infoln("applying trigger policy")
+		if err := triggerImpl.ApplyPolicy(newObj); err != nil {
+			return err
+		}
+
+		log.WithField("triggerName", trigger.Template.Name).Infoln("successfully processed the trigger")
+	}
+	return nil
+}
 
 func (sensorCtx *SensorContext) getDependencyExpression(trigger v1alpha1.Trigger) (string, error) {
 	sensor := sensorCtx.Sensor
@@ -141,10 +195,10 @@ func (sensorCtx *SensorContext) getDependencyExpression(trigger v1alpha1.Trigger
 	if len(sensor.Spec.DependencyGroups) > 0 && sensor.Spec.Circuit != "" && trigger.Template.Switch != nil {
 		temp := ""
 		sw := trigger.Template.Switch
-		switch{
+		switch {
 		case len(sw.All) > 0:
 			temp = strings.Join(sw.All, "&&")
-		case len(sw.Any) > 0 :
+		case len(sw.Any) > 0:
 			temp = strings.Join(sw.Any, "||")
 		default:
 			return "", errors.New("invalid trigger switch")
@@ -161,92 +215,31 @@ func (sensorCtx *SensorContext) getDependencyExpression(trigger v1alpha1.Trigger
 			sensorCtx.Logger.WithError(err).Errorln("Failed to compile group dependency expression")
 			return "", err
 		}
-		depExpression, err = expr.Run(program, depGroupMapping)
+		result, err := expr.Run(program, depGroupMapping)
 		if err != nil {
 			sensorCtx.Logger.WithError(err).Errorln("Failed to parse group dependency expression")
 			return "", err
 		}
+		depExpression = fmt.Sprintf("%v", result)
 	} else {
-		deps := []string
+		deps := []string{}
 		for _, dep := range sensor.Spec.Dependencies {
-			deps = deps.append(deps, dep.Name)
+			deps = append(deps, dep.Name)
 		}
 		depExpression = strings.Join(deps, "&&")
 	}
+	sensorCtx.Logger.Infof("Dependency expression for trigger %s before simlification: %s", trigger.Template.Name, depExpression)
 	boolSimplifier, err := common.NewBoolExpression(depExpression)
 	if err != nil {
 		sensorCtx.Logger.WithError(err).Errorln("Invalid dependency expression")
 		return "", err
 	}
-	return boolSimplifier.GetExpression()
+	result := boolSimplifier.GetExpression()
+	sensorCtx.Logger.Infof("Dependency expression for trigger %s after simlification: %s", trigger.Template.Name, result)
+	return result, nil
 }
 
-// // listenEventsOverHTTP listens to events over HTTP
-// func (sensorCtx *SensorContext) listenEventsOverHTTP() error {
-// 	port := sensorCtx.Sensor.Spec.Subscription.HTTP.Port
-// 	if port == 0 {
-// 		port = common.SensorServerPort
-// 	}
-
-// 	sensorCtx.Logger.WithFields(logrus.Fields{
-// 		"port":     port,
-// 		"endpoint": "/",
-// 	}).Infoln("starting HTTP events receiver")
-
-// 	http.HandleFunc("/", func(writer http.ResponseWriter, request *http.Request) {
-// 		eventBody, err := ioutil.ReadAll(request.Body)
-// 		if err != nil {
-// 			writer.WriteHeader(http.StatusBadRequest)
-// 			_, _ = writer.Write([]byte("failed to parse the event"))
-// 			return
-// 		}
-// 		if err := sensorCtx.handleEvent(eventBody); err != nil {
-// 			writer.WriteHeader(http.StatusInternalServerError)
-// 			_, _ = writer.Write([]byte("failed to handle the event"))
-// 			return
-// 		}
-// 	})
-
-// 	if err := http.ListenAndServe(fmt.Sprintf(":%d", port), nil); err != nil {
-// 		return err
-// 	}
-
-// 	return nil
-// }
-
-// listenEventsOverNATS listens to events over NATS
-// func (sensorCtx *SensorContext) listenEventsOverNATS() error {
-// 	subscription := sensorCtx.Sensor.Spec.Subscription.NATS
-
-// 	conn, err := nats.Connect(subscription.ServerURL)
-// 	if err != nil {
-// 		return err
-// 	}
-
-// 	logger := sensorCtx.Logger.WithFields(logrus.Fields{
-// 		"url":     subscription.ServerURL,
-// 		"subject": subscription.Subject,
-// 	})
-
-// 	logger.Infoln("starting NATS events subscriber")
-
-// 	_, err = conn.Subscribe(subscription.Subject, func(msg *nats.Msg) {
-// 		if err := sensorCtx.handleEvent(msg.Data); err != nil {
-// 			logger.WithError(err).Errorln("failed to process the event")
-// 		}
-// 	})
-// 	if err != nil {
-// 		return err
-// 	}
-
-// 	return nil
-// }
-
-func cloudEventConverter(event *cloudevents.Event) (*v1alpha1.Event, error) {
-	data, err := event.DataBytes()
-	if err != nil {
-		return nil, err
-	}
+func convertEvent(event cloudevents.Event) *v1alpha1.Event {
 	return &v1alpha1.Event{
 		Context: &v1alpha1.EventContext{
 			DataContentType: event.Context.GetDataContentType(),
@@ -257,35 +250,21 @@ func cloudEventConverter(event *cloudevents.Event) (*v1alpha1.Event, error) {
 			ID:              event.Context.GetID(),
 			Subject:         event.Context.GetSubject(),
 		},
-		Data: data,
-	}, nil
+		Data: event.Data(),
+	}
 }
 
-// handleEvent handles a cloudevent, validates and sends it over internal event notification queue
-func (sensorCtx *SensorContext) handleEvent(eventBody []byte) error {
-	var event *cloudevents.Event
-	if err := json.Unmarshal(eventBody, &event); err != nil {
-		return err
+func unique(stringSlice []string) []string {
+	if len(stringSlice) == 0 {
+		return stringSlice
 	}
-
-	internalEvent, err := cloudEventConverter(event)
-	if err != nil {
-		return errors.Wrap(err, "failed to parse the cloudevent")
-	}
-
-	sensorCtx.Logger.WithFields(logrus.Fields{
-		"source":  event.Context.GetSource(),
-		"subject": event.Context.GetSubject(),
-	}).Infoln("received event")
-
-	// Resolve Dependency
-	// validate whether the event is from gateway that this sensor is watching
-	if eventDependency := dependencies.ResolveDependency(sensorCtx.Sensor.Spec.Dependencies, internalEvent, sensorCtx.Logger); eventDependency != nil {
-		sensorCtx.NotificationQueue <- &types.Notification{
-			Event:            internalEvent,
-			EventDependency:  eventDependency,
-			NotificationType: v1alpha1.EventNotification,
+	keys := make(map[string]bool)
+	list := []string{}
+	for _, entry := range stringSlice {
+		if _, value := keys[entry]; !value {
+			keys[entry] = true
+			list = append(list, entry)
 		}
 	}
-	return nil
+	return list
 }
